adding translated content

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ setup:
 setup-zh:
   title: 昆明自酿啤酒协会
   tagline: '在昆明自酿啤酒'
-  description: '昆明自酿啤酒协会”是为对自酿啤酒、苹果酒和蜂蜜酒感兴趣的朋友提供的一个分享、交流和学习的平台。我们致力于在昆明传播知识、文化和欣赏真正的啤酒。协会是向所有人开放的，无论您是新手还是老手。我们将定期于每个月的第三个周六开展酒吧聚会，地点会安排于不同的酒吧，每次聚会将会根据一个自酿酒话题进行演讲、讨论等，当然还有啤酒品尝！聚会中，我们鼓励大家带自酿的啤酒给大家品尝！欢迎所有感兴趣的朋友参加聚会，即使您不是我们的会员。'
+  description: '“昆明自酿啤酒协会”是为对自酿啤酒、苹果酒和蜂蜜酒感兴趣的朋友提供的一个分享、交流和学习的平台。我们致力于在昆明传播知识、文化和欣赏真正的啤酒。协会是向所有人开放的，无论您是新手还是老手。我们将定期于每个月的第三个周六开展酒吧聚会，地点会安排于不同的酒吧，每次聚会将会根据一个自酿酒话题进行演讲、讨论等，当然还有啤酒品尝！聚会中，我们鼓励大家带自酿的啤酒给大家品尝！欢迎所有感兴趣的朋友参加聚会，即使您不是我们的会员。'
   url: http://kunmingbeer.org/zh
 
 author:
