--- a/_config.yml
+++ b/_config.yml
@@ -31,20 +31,20 @@ permalink:	/:title
 
 # Setup
 setup:
-  title: Kunming Homebrewing Society
-  tagline: 'Brewing beer at home in Kunming'
+  title: Kunming Craft Beer Society
+  tagline: 'All about beer in Kunming'
   description: 'The society dedicated to everything about drinking and brewing craft beer, mead, and cider in Kunming, China. We organise monthly events, discussions, and beer tastings, classes and workshops, as well as sponsor an ingredients cooperative.'
   url: http://kunmingbeer.org
 
-title: Kunming Homebrewing Society
-tagline: 'Brewing beer at home in Kunming'
+title: Kunming Craft Beer Society
+tagline: 'All about beer in Kunming'
 description: 'The society dedicated to everything about drinking and brewing craft beer, mead, and cider in Kunming, China. We organise monthly events, discussions, and beer tastings, classes and workshops, as well as sponsor an ingredients cooperative.'
 url: http://kunmingbeer.org
 
 setup-zh:
-  title: 昆明自酿啤酒协会
-  tagline: '在昆明自酿啤酒'
-  description: '“昆明自酿啤酒协会”是为对自酿啤酒、苹果酒和蜂蜜酒感兴趣的朋友提供的一个分享、交流和学习的平台。我们致力于在昆明传播知识、文化和欣赏真正的啤酒。协会是向所有人开放的，无论您是新手还是老手。我们将定期于每个月的第三个周六开展酒吧聚会，地点会安排于不同的酒吧，每次聚会将会根据一个自酿酒话题进行演讲、讨论等，当然还有啤酒品尝！聚会中，我们鼓励大家带自酿的啤酒给大家品尝！欢迎所有感兴趣的朋友参加聚会，即使您不是我们的会员。'
+  title: 昆明精酿啤酒协会
+  tagline: '在昆明精酿啤酒'
+  description: '“昆明精酿啤酒协会”是为对精酿啤酒、苹果酒和蜂蜜酒感兴趣的朋友提供的一个分享、交流和学习的平台。我们致力于在昆明传播知识、文化和欣赏真正的啤酒。协会是向所有人开放的，无论您是新手还是老手。我们将定期于每个月的第三个周六开展酒吧聚会，地点会安排于不同的酒吧，每次聚会将会根据一个精酿酒话题进行演讲、讨论等，当然还有啤酒品尝！聚会中，我们鼓励大家带自己酿的啤酒给大家品尝！欢迎所有感兴趣的朋友参加聚会，即使您不是我们的会员。'
   url: http://kunmingbeer.org/zh
 
 author:
@@ -130,7 +130,7 @@ copyright:
   type_url:	http://creativecommons.org/licenses/by-nc/2.5
 
 copyright-zh:
-  author: 昆明自酿啤酒协会
+  author: 昆明精酿啤酒协会
   url: http://kunmingbeer.org
   type_title: 保留部分权利
   type_url: http://creativecommons.org/licenses/by-nc/2.5
